// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActivityIcon/> renders the desktop icon 1`] = `
<div
  className="cl-activity-icon cl-activity-icon-desktop"
>
  <svg
    data-filename="../shared/assets/icons/desktop.svg"
  />
</div>
`;

exports[`<ActivityIcon/> renders the mobile icon 1`] = `
<div
  className="cl-activity-icon cl-activity-icon-mobile"
>
  <svg
    data-filename="../shared/assets/icons/mobile.svg"
  />
</div>
`;
